feat(UI): Add additionalInfo to resource metadata + update Microsoft 365 source (#1321)
* change collection interval description

* comment

* added additionalInfo > mui alert on title and utilized in m365 source

* ci lint

* AdditionalInfoBlock description

* add generated.ts

* capitalize Apply Configuration button

* feedback implemented

* ran make generate

* additionalInfo shows up on add and edit source dialogs

* info alert only shows on sources that have additionalInfo

* make generate

* change to pointer

* make install-tools and make generate

* make swagger

* make generate

* small change

* make generate

* added a test

* fixed fields

* finalized

* fixed test

* Change name from AdditionalInfoBlock to AdditionalInfo

* One more reference to AdditionalInfoBlock removed

* allow additionalInfo prop to be null

---------
