# docs/swagger/swagger.json
@@ -1604,6 +1604,20 @@
         }
     },
     "definitions": {
+        "model.AdditionalInfo": {
+            "type": "object",
+            "properties": {
+                "documentation": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.DocumentationLink"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Agent": {
             "type": "object",
             "properties": {
@@ -2262,6 +2276,9 @@
         "model.Metadata": {
             "type": "object",
             "properties": {
+                "additionalInfo": {
+                    "$ref": "#/definitions/model.AdditionalInfo"
+                },
                 "dateModified": {
                     "type": "string"
                 },
